--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/?size=96&id=20909&format=png" type="image/x-icon">
 </head>
+<style>
+    /* h1{
+        color: gray;
+    } */
+</style>
 <body>
-    <h2>I am a new Programmer</h2>
+    <div id="heading-parent">
+        <h1>I am a new Programmer</h1>
+    </div>
+    
 </body>
 </html>
