--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
     <div id="heading-parent">
         <h1>I am a new Programmer</h1>
+        <div class="btn-parent"><button class="btn">Hire me Now</button>
+        </div>
+        
     </div>
     
 </body>
